[project]
name = "clock"
version = "0.1.0"
description = ""
authors = [
    {name = "SherAndrei",email = "welldryus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
